Updated self description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="contact-info__block">
                     <a href="" rel="author" class="contact-info__item">
                         <div class="contact-info__item-icon-wrapper">
-                          <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                          <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
                               d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
                               192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
@@ -31,7 +31,7 @@
                       </a>
                       <a href="https://www.linkedin.com/in/clarence-co-555885137/" rel="author" class="contact-info__item">
                         <div class="contact-info__item-icon-wrapper">
-                          <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                          <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
                               d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
                               480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4
@@ -44,6 +44,14 @@
                           </svg>
                         </div>
                         <span>LinkedIn</span>
+                      </a>
+                      <a href="mailto:clarencejosephco@gmail.com" rel="author" class="contact-info__item">
+                        <div class="contact-info__item-icon-wrapper">
+                          <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/>
+                          </svg>
+                        </div>
+                        <span>Mail</span>
                       </a>
 
                       
@@ -75,10 +83,7 @@
                     ></path>
                   </svg>
                 </div>
-                <p class="intro_text">I'm Clarence, a software developer driven by innovation and
-                  problem-solving. With a strong background in engineering,
-                  I'm dedicated to pushing boundaries and crafting elegant
-                  solutions through code.</p>
+                <p class="intro_text">I'm Clarence, an engineer by education and a problem solver by heart. I thrive on tackling complex challenges and finding innovative solutions. With a keen eye for detail and a passion for continuous learning, I aim to make a meaningful impact through my work and collaborations.</p>
               </div>
             </div>
           </div>
