Added Experience section

--- a/index.html
+++ b/index.html
@@ -125,6 +125,58 @@
               </div>
             </div>
           </div>
+          <div class="container">
+            <div class="resume__block">
+                <div class="main-info fh">
+                    <div class="experiences">
+                        <h3 class="experiences__header">Experience</h3>
+                            <div class="experiences__company">
+                                <div class="experiences__company-header">
+                                    <span class="experiences__company-header-durability">2018-Present</span>
+                                    <h3 class="experiences__company-header-name">Hearts and Arrows</h3>
+                                </div>
+
+                                <div class="experiences__company-project">
+                                    <span class="experiences__company-project-role"></span>
+                                    <h3 class="experiences__company-project-name">Automation Engineer</h3>
+                                    <ul class="experiences__company-project-responsibilities">
+                                    <li>Accounting Procedures Macros</li>
+                                    <li>Web Scraping</li>
+                                    <li>Financial Audit</li>
+                                    <li>Business Intelligence</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="experiences__company">
+                                <div class="experiences__company-header">
+                                    <span class="experiences__company-header-durability">2022-2024</span>
+                                    <h3 class="experiences__company-header-name">Hope Christian High School</h3>
+                                </div>
+
+                                <div class="experiences__company-project">
+                                    <span class="experiences__company-project-role"></span>
+                                    <h3 class="experiences__company-project-name">Instructor</h3>
+                                    <ul class="experiences__company-project-responsibilities">
+                                    <li>General Chemistry for STEM</li>
+                                    <li>General Physics for STEM</li>
+                                    <li>Science 9</li>
+                                    <li>Special Math Course</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+
+
+                    </div>
+            
+                    <div class="additional-info fv">
+
+
+                    </div>
+                </div>
+            </div>
+          </div>
 
           
         </div>
